[package]
name = "binance-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
binance-rs-async = "1.3.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.18.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
